--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,26 +48,27 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
-# - stage: Deploy
-#   displayName: Deploy stage
-#   dependsOn: Build
-#   condition: succeeded()
-#   jobs:
-#   - deployment: Deploy
-#     displayName: Deploy
-#     environment: 'development'
-#     pool:
-#       vmImage: $(vmImageName)
+- stage: Deploy
+  displayName: Deploy stage
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: 'development'
+    pool:
+      vmImage: $(vmImageName)
 
-#     strategy:
-#       runOnce:
-#         deploy:
+    strategy:
+      runOnce:
+        deploy:
 
-#           steps:
-#           - task: AzureFunctionApp@1
-#             displayName: 'Azure functions app deploy'
-#             inputs:
-#               azureSubscription: '$(azureSubscription)'
-#               appType: functionApp
-#               appName: $(functionAppName)
-#               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+          steps:
+          - task: AzureFunctionApp@1
+            displayName: 'Azure functions app deploy'
+            inputs:
+              azureSubscription: '$(azureSubscription)'
+              appType: 'functionApp'
+              appName: '$(functionAppName)'
+              package: '''$(Pipeline.Workspace)/drop/**/target/*.?(war|jar)'''
+              deploymentMethod: 'auto'
