--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
         Contents: '**/target/*.?(war|jar)'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-    - publish: $(Build.ArtifactStagingDirectory)
+    - upload: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
 - stage: Deploy
