--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
           - task: AzureFunctionApp@1
             displayName: 'Azure functions app deploy'
             inputs:
-              azureSubscription: '$(azureSubscription)'
+              azureSubscription: 'Nipun Bahri Subscription (bf0f6779-86d2-467e-8226-10f92a8ad378)'
               appType: 'functionAppLinux'
-              appName: '$(functionAppName)'
+              appName: 'demo-functions19'
               package: '$(Pipeline.Workspace)/drop/**/target/*.?(war|jar)'
